# rust-build-test

./: .gitignore  Cargo.toml
add_one/: Cargo.toml
add_one/src/: lib.rs
add_one/tests/: integration.rs
add_one/tests/common/: mod.rs
add_two/: Cargo.toml
add_two/src/: lib.rs
add_two/tests/: integration.rs
add_two/tests/common/: mod.rs
adder/: Cargo.toml
adder/src/: main.rs
custom_adder/: Cargo.toml
custom_adder/src/: main.rs
libadder/: Cargo.toml
libadder/src/: add_one.rs  add_three.rs  add_two.rs  lib.rs
libadder/tests/: add_one_mod.rs  add_three_mod.rs  add_two_mod.rs  integration.rs
libadder/tests/common/: mod.rs
libsnapper/: Cargo.toml
libsnapper/src/: lib.rs
logger/: Cargo.toml
logger/src/: datelogger.rs  lib.rs  logger.rs
logger/tests/: integration.rs
logger/tests/common/: mod.rs
snapper-rs/: Cargo.toml
snapper-rs/src/: main.rs
