[workspace]

members = [
  "libsnapper",
  "snapper-rs",
  "libadder",
  "adder",
  "custom_adder",
  "logger"
]

[profile.dev]
opt-level = 1
overflow-checks = false
debug = true
debug-assertions = true
lto = false

[profile.release]
opt-level = 3
overflow-checks = true
debug = false
debug-assertions = false
lto = true
